Changelog
---------

v7.0.1:
 SportsTracker changes:
  - update of the bundled Java runtime to Java SE/FX 8u40, which contains many
    bugfixes
  - removed workarounds for Java versions earlier than 8u40

v7.0.0:
 SportsTracker changes:
  - use of no_aop version of Guice 3.0, is smaller and has less dependencies
  - update of Groovy to 2.4.1
  - update of JDOM to version 2.0.5
  - update of SwingX to 1.6.5-1
  - replaced SwingX-WS 1.0 library by JXMapViewer2 2.0 library
    - SwingX-WS is not under development anymore
    - JXMapViewer2 is an active, compatible fork with bug fixes, hosted at:
      https://github.com/msteiger/jxmapviewer2
  - switched compiler to Java 8 in module st-exerciseviewer 
    (already done in all other modules)
  - use of Java 8 Lambda features in module st-exerciseviewer
  - bugfix (reported by Doug Harple): adding an exercise via drag & drop of a
    HRM exercise file is now also possible when there are no exercises yet
    (a sport type must exist at least)
  - update to JFreeChart 1.0.19 (and JCommon 1.0.23) which provides JavaFX
    support
  - full rewrite of the SportsTracker and ExerciseViewer user interface by
    using JavaFX instead Swing
    - user interfaces are now declared in FXML using SceneBuilder
    - JavaFX provides improved look & feel (not native, same on all platforms)
    - no more UI problems on Linux (Swing system look & feel was horrible)
    - use of native file chooser dialogs on all platforms
  - all SportsTracker dialogs: added instant input validation
    - all required inputs are marked with a red upper left corner
    - the OK button is active only when all required user inputs are available
      and all inputs are valid
  - Exercise List View:
    - new table menu in header (+) for simple enabling / disabling table
      columns
    - list of optional columns (as configured in Preferences) is now used at
      application startup only (renamed to 'initial optional fields')