@@ -1,15 +1,19 @@
 package de.saring.sportstracker.gui.dialogs;
 
+import de.saring.util.gui.javafx.TimeToStringConverter;
 import javafx.fxml.FXML;
 import javafx.scene.control.Control;
 import javafx.scene.control.DatePicker;
 import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
+import javafx.scene.control.TextFormatter;
 import javafx.stage.Window;
+import javafx.util.StringConverter;
 import javafx.util.converter.NumberStringConverter;
 
 import javax.inject.Inject;
 
+import javafx.util.converter.TimeStringConverter;
 import org.controlsfx.validation.ValidationResult;
 import org.controlsfx.validation.Validator;
 
@@ -17,6 +21,9 @@ import de.saring.sportstracker.data.Note;
 import de.saring.sportstracker.gui.STContext;
 import de.saring.sportstracker.gui.STDocument;
 import de.saring.util.ValidationUtils;
+
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 
 /**
  * Controller (MVC) class of the Note dialog for editing / adding Note entries.
@@ -30,13 +37,8 @@ public class NoteDialogController extends AbstractDialogController {
     @FXML
     private DatePicker dpDate;
 
-    // TODO use formatted TextField, will be introduced in JavaFX 8u40
     @FXML
-    private TextField tfHour;
-
-    // TODO use formatted TextField, will be introduced in JavaFX 8u40
-    @FXML
-    private TextField tfMinute;
+    private TextField tfTime;
 
     @FXML
     private TextArea taText;
@@ -76,19 +78,17 @@ public class NoteDialogController extends AbstractDialogController {
 
         // setup binding between view model and the UI controls
         dpDate.valueProperty().bindBidirectional(noteViewModel.date);
-        tfHour.textProperty().bindBidirectional(noteViewModel.hour, new NumberStringConverter("00"));
-        tfMinute.textProperty().bindBidirectional(noteViewModel.minute, new NumberStringConverter("00"));
+
+        // use text formatter for time values => makes sure that the value is also valid
+        final TextFormatter<LocalTime> timeTextFormatter = new TextFormatter<>(new TimeToStringConverter());
+        timeTextFormatter.valueProperty().bindBidirectional(noteViewModel.time);
+        tfTime.setTextFormatter(timeTextFormatter);
+
         taText.textProperty().bindBidirectional(noteViewModel.text);
 
         // setup validation of the UI controls
         validationSupport.registerValidator(dpDate,
                 Validator.createEmptyValidator(context.getResources().getString("st.dlg.note.error.date")));
-        validationSupport.registerValidator(tfHour, true, (Control control, String newValue) ->
-                ValidationResult.fromErrorIf(tfHour, context.getResources().getString("st.dlg.note.error.time"),
-                        !ValidationUtils.isValueIntegerBetween(newValue, 0, 23)));
-        validationSupport.registerValidator(tfMinute, true, (Control control, String newValue) ->
-                ValidationResult.fromErrorIf(tfMinute, context.getResources().getString("st.dlg.note.error.time"),
-                        !ValidationUtils.isValueIntegerBetween(newValue, 0, 59)));
         validationSupport.registerValidator(taText,
                 Validator.createEmptyValidator(context.getResources().getString("st.dlg.note.error.no_text")));
     }
