@@ -4,9 +4,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 
-import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.ObjectProperty;
-import javafx.beans.property.SimpleIntegerProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
@@ -23,8 +21,7 @@ public class NoteViewModel {
 
     private final int id;
     public final ObjectProperty<LocalDate> date;
-    public final IntegerProperty hour;
-    public final IntegerProperty minute;
+    public final ObjectProperty<LocalTime> time;
     public final StringProperty text;
 
     /**
@@ -35,8 +32,7 @@ public class NoteViewModel {
     public NoteViewModel(final Note note) {
         this.id = note.getId();
         this.date = new SimpleObjectProperty(note.getDateTime().toLocalDate());
-        this.hour = new SimpleIntegerProperty(note.getDateTime().getHour());
-        this.minute = new SimpleIntegerProperty(note.getDateTime().getMinute());
+        this.time = new SimpleObjectProperty(note.getDateTime().toLocalTime());
         this.text = new SimpleStringProperty(note.getText());
     }
 
@@ -47,7 +43,7 @@ public class NoteViewModel {
      */
     public Note getNote() {
         final Note note = new Note(id);
-        note.setDateTime(LocalDateTime.of(date.get(), LocalTime.of(hour.getValue(), minute.getValue())));
+        note.setDateTime(LocalDateTime.of(date.get(), time.get()));
         note.setText(text.getValue().trim());
         return note;
     }
